--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     scroll-behavior: auto;
 }
+
+/************************************************/
+/*         NAVIGATION BAR                       */
+/************************************************/
 #navigation{
     display: flex;
     position: fixed;
