--- a/style.css
+++ b/style.css
@@ -7,43 +7,37 @@
 /************************************************/
 /*         NAVIGATION BAR                       */
 /************************************************/
-#navigation{
-    display: flex;
-    position: fixed;
-    background-color: blue;
-    height: 50px;
-    top:0;
+
+.header{
+    height: 45px;
+    width: 100%;
     left: 0;
-    width: 100%;
+    top: 0;
+    position: fixed;
+    display: inline-block;
+    text-align: center;
+    z-index: 2;
 }
-#navigation_part{
+.index{
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
     width: 100%;
+    height: 45px;
 }
-#brand{
-    height: 100%;
-    background-color: blue;
-    font-family: 'Brush Script MT', cursive;
+.index_c{
+    float: right;
+    padding: 10px;
+    padding-bottom: 10px;
+}
+.index_c a{
     color: white;
-    font-size: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-#contents{
-    height: 100%;
-    background-color: blue;
-    color:white;
-    font-size: 30px;
-    text-align: right;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    text-decoration: none;
 }
 
-#navigation li{
-   display: inline;
-   text-align: center;
-   margin: 0 10px 0 0;
-}
+/******************************************/
 
 #presentation{
     display: flex;
